--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -21,17 +21,12 @@
 		<meta property="fb:page_id" content="102742293101063" />
 
 		<link rel="stylesheet" href="base.css" type="text/css" />
-		<link rel="icon" href="favicon.png" />
+		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 
 		<link href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-
 		<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
-		<script type="text/javascript">
-			Paddle.Setup({
-				vendor: 32405
-			});
-		</script>
+		<script src="index.js"></script>
 	</head>
 	<body>
 		<div class="page">
@@ -71,25 +66,11 @@
 				</div>
 
 				<div id="macosx" class="section deployment macosx macappstore" style="display:none">
-					<script type="text/javascript">
-						$(document).ready(function () {
-							if (navigator.userAgent.indexOf('Macintosh') >= 0) {
-								$(".macappstore").show();
-							}
-						});
-					</script>
 					<div class="install button">
 						<a href="https://get.filebot.net/mac/1" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(images/mac.button.svg) no-repeat;width:165px;height:40px;"></a>
 					</div>
 				</div>
 				<div id="windows" class="section deployment windows winappstore" style="display:none">
-					<script type="text/javascript">
-						$(document).ready(function () {
-							if (navigator.userAgent.indexOf('Windows') >= 0) {
-								$(".winappstore").show();
-							}
-						});
-					</script>
 					<div class="install button">
 						<a href="https://get.filebot.net/windows/1" target="windows_store"><img style="border-radius: 4px; border: 4px solid #2574ce; box-shadow: 0px 2px 5px #a2a2a2;" width="165" src="images/windows.button.png" alt="Get it on Windows 10" /></a>
 					</div>
@@ -100,23 +81,6 @@
 					<img src="images/thumbs_up.png" />
 				</div>
 				<div>
-					<script type="text/javascript">
-						$(document).ready(function () {
-							$.ajax({
-								url: 'reviews.json',
-								dataType: 'json',
-								success: function(data) {
-									var review = data[Math.floor(Math.random() * data.length)]
-									if (review.user.length > 0 && review.date.length > 0 && review.text.length > 0) {
-										$('#review .user').text(review.user)
-										$('#review .date').text(review.date)
-										$('#review .text').text(review.text)
-										$('#review').show()
-									}
-								}
-							});
-						});
-					</script>
 					<p class="head">Posted by <span class="user"></span> on <span class="date"></span></p>
 					<p class="text quote"></p>
 				</div>
