--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -32,20 +32,20 @@
 		<div class="page">
 			<div class="navigation">
 				<div>
-				<ul>
-					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/forums/viewtopic.php?f=3&amp;t=7#p7">FAQ</a></li>
-					<li><a href="#download">Download</a></li>
-				</ul>
+					<ul>
+						<li><a href="forums/">Forums</a></li>
+						<li><a href="manual.html">FAQ</a></li>
+						<li><a href="#download">Download</a></li>
+					</ul>
 				</div>
 			</div>
 
 			<div class="header">
-				<a href="https://www.filebot.net/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
-					<a href="https://www.filebot.net/forums/viewforum.php?f=7" class="source" target="_blank">v@{application.version}</a>
-					<span class="description">The ultimate tv renamer / subtitle downloader / sfv validator</span>
+					<a href="forums/viewforum.php?f=7" class="source" target="_blank">v@{application.version}</a>
+					<span class="description">@{package.synopsis}</span>
 				</h1>
 			</div>
 
@@ -105,7 +105,7 @@
 					</ol>
 					<p><strong>Use FileBot from the command-line!</strong> There is a simple <acronym title="command-line interface"><a href="cli.html">CLI</a></acronym> for core tasks like renaming media files and fetching subtitles 
 					as well as checking or creating SFV files. On top of that you can use our <a href="script.html">scripting engine</a> to define more complex 
-					automated processing. There's already <a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p5">shared scripts</a> for
+					automated processing. There's already <a href="forums/viewtopic.php?t=5#p5">shared scripts</a> for
 					various tasks that you can just run right away or further customize to your needs.</p>
 					<ul>
 						<li>Watch media folders and organize new files automatically</li>
@@ -116,14 +116,14 @@
 						<li>Update your Kodi or Plex library</li>
 						... and more!
 					</ul>
-					<p>Setting up a <strong>fully automated media center</strong> – extract archives, organize tv shows and movies, download subtitles, fetch artwork and metadata, update Kodi – with FileBot it's <a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=215#p1561">that</a> easy!</p>
+					<p>Setting up a <strong>fully automated media center</strong> – extract archives, organize tv shows and movies, download subtitles, fetch artwork and metadata, update Kodi – with FileBot it's <a href="forums/viewtopic.php?t=215#p1561">that</a> easy!</p>
 					<ul style="list-style-type:  square; border: thin dotted lavender; background: #FDFDFF">
-						<li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=215#p1561" target="_blank">µTorrent on Windows</a></li>
-						<li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=215#p9774" target="_blank">qBittorrent on Mac OS X</a></li>
-						<li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=215#p5316" target="_blank">rTorrent on any Linux server</a></li>
-						<li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=215#p1561" target="_blank">Console tool on all platforms</a></li>
+						<li><a href="forums/viewtopic.php?t=215#p1561" target="_blank">µTorrent on Windows</a></li>
+						<li><a href="forums/viewtopic.php?t=215#p9774" target="_blank">qBittorrent on Mac OS X</a></li>
+						<li><a href="forums/viewtopic.php?t=215#p5316" target="_blank">rTorrent on any Linux server</a></li>
+						<li><a href="forums/viewtopic.php?t=215#p1561" target="_blank">Console tool on all platforms</a></li>
 					</ul>
-					<p>If you have any questions or problems just to check the <a href="https://www.filebot.net/forums/viewtopic.php?f=3&amp;t=7">FAQ</a> or search the <a href="https://www.filebot.net/forums/">forums</a>.</p>
+					<p>If you have any questions or problems just to check the <a href="forums/viewtopic.php?t=7">FAQ</a> or search the <a href="forums/">forums</a>.</p>
 
 					<div class="video">
 						<iframe src="getting-started/index.html" frameborder="0" allowfullscreen="true"></iframe>
@@ -137,7 +137,7 @@
 					<ul class="list">
 						<li>A simple user-interface tuned for drag-n-drop <small class="comment">(no need to bother with file dialogs)</small></li>
 						<li>Platform-independent and straight-forward application deployment</li>
-						<li>Powerful and full-featured <a class="important" href="cli.html">cmdline interface</a> and <a class="important" href="script.html">scripting interface</a> for any kind of <a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5">automation</a></li>
+						<li>Powerful and full-featured <a class="important" href="cli.html">cmdline interface</a> and <a class="important" href="script.html">scripting interface</a> for any kind of <a href="forums/viewtopic.php?t=5">automation</a></li>
 					</ul>
 					<ul class="list next" id="rename">
 						<li>
@@ -204,15 +204,15 @@
 					<ul class="list">
 						<li class="windows">Available on the <a href="https://get.filebot.net/windows/2" target="windows_store">Windows Store</a></li>
 						<li class="macosx">Available on the <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a></li>
-						<li class="macappstore note"><span>The <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a> version does not support <a href="https://www.filebot.net/forums/viewtopic.php?f=12&amp;t=5983" target="itunes_store">certain features</a>.</span></li>
+						<li class="macappstore note"><span>The <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a> version does not support <a href="forums/viewtopic.php?f=12&amp;t=5983" target="itunes_store">certain features</a>.</span></li>
 						<li>Windows installer: <a href="javascript:;" class="paddle_download" data-download-url="@{link.release.index}/@{release}/@{release}_x64.msi" data-download-prompt="false" data-vendor-name="@{package.company}">@{release}_x64.msi</a></li>
 						<li>macOS installer: <a href="javascript:;" class="paddle_download" data-download-url="@{link.release.index}/@{release}/@{release}.pkg" data-download-prompt="false" data-vendor-name="@{package.company}">@{release}.pkg</a></li>
 						<li>Debian package: <a href="javascript:;" class="paddle_download" data-download-url="@{link.release.index}/@{release}/@{release}_amd64.deb" data-download-prompt="false" data-vendor-name="@{package.company}">@{release}_amd64.deb</a></li>
 						<li>Portable tarball: <a href="javascript:;" class="paddle_download" data-download-url="@{link.release.index}/@{release}/@{release}-portable.tar.xz" data-download-prompt="false" data-vendor-name="@{package.company}">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small></li>
-						<li>macOS package is available <a href="javascript:;" class="paddle_download" data-download-url="https://www.filebot.net/mac/brew.html" data-download-prompt="false" data-vendor-name="@{package.company}">via brew cask</a></li>
-						<li>Ubuntu package is available <a href="javascript:;" class="paddle_download" data-download-url="https://www.filebot.net/linux/snap.html" data-download-prompt="false" data-vendor-name="@{package.company}">on the Ubuntu Store</a></li>
-						<li>Synology NAS package is available <a href="javascript:;" class="paddle_download" data-download-url="https://www.filebot.net/linux/syno.html" data-download-prompt="false" data-vendor-name="@{package.company}">via Package Center</a></li>
-						<li>Docker images are available <a href="javascript:;" class="paddle_download" data-download-url="https://www.filebot.net/linux/docker.html" data-download-prompt="false" data-vendor-name="@{package.company}">on Docker Hub</a></li>
+						<li>macOS package is available <a href="javascript:;" class="paddle_download" data-download-url="mac/brew.html" data-download-prompt="false" data-vendor-name="@{package.company}">via brew cask</a></li>
+						<li>Ubuntu package is available <a href="javascript:;" class="paddle_download" data-download-url="linux/snap.html" data-download-prompt="false" data-vendor-name="@{package.company}">on the Ubuntu Store</a></li>
+						<li>Synology NAS package is available <a href="javascript:;" class="paddle_download" data-download-url="linux/syno.html" data-download-prompt="false" data-vendor-name="@{package.company}">via Package Center</a></li>
+						<li>Docker images are available <a href="javascript:;" class="paddle_download" data-download-url="linux/docker.html" data-download-prompt="false" data-vendor-name="@{package.company}">on Docker Hub</a></li>
 					</ul>
 				</div>
 
@@ -233,8 +233,8 @@
 					<span class="quote">Will you join us?</span>
 					<h2>Contact</h2>
 					<p>
-						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="https://www.filebot.net/forums/viewforum.php?f=8">feedback</a> is more than welcome 
-						and if there's any questions or problems just start posting in the <a target="_blank" href="https://www.filebot.net/forums/">forums</a> or check the <a target="_blank" href="https://www.filebot.net/manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
+						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
+						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
 						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a> and become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a>.
 					</p>
 				</div>
@@ -244,7 +244,7 @@
 			</div>
 
 			<div class="footer">
-				<p><a href="https://www.filebot.net/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
+				<p><a href="/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
 			</div>
 		</div>
 	</body>
