--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -226,7 +226,7 @@
 					<span class="quote">We work to better ourselves</span>
 					<h2>Buy License</h2>
 					<ul class="list">
-						<li class="purchase year">Purchase a <a href="@{link.app.purchase}#web">1 year universal license</a><div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div></li>
+						<li class="purchase year">Purchase a <a href="purchase.html#web">1 year universal license</a><div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div></li>
 						<li class="note">A valid license is required to unlock FileBot.</li>
 						<li class="note">A single license is valid on all platforms and can be used on multiple machines.</li>
 						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Windows Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not require a separate license.</li>
