redirect 302 /linux/qnap.html

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -215,6 +215,7 @@
 						<li>macOS package is available <a href="javascript:;" class="paddle_download" data-download-url="mac/brew.html" data-download-prompt="false" data-vendor-name="@{package.company}">via brew cask</a></li>
 						<li>Ubuntu package is available <a href="javascript:;" class="paddle_download" data-download-url="linux/snap.html" data-download-prompt="false" data-vendor-name="@{package.company}">on the Ubuntu Store</a></li>
 						<li>Synology NAS package is available <a href="javascript:;" class="paddle_download" data-download-url="linux/syno.html" data-download-prompt="false" data-vendor-name="@{package.company}">via Package Center</a></li>
+						<li>QNAP NAS package is available <a href="javascript:;" class="paddle_download" data-download-url="linux/qnap.html" data-download-prompt="false" data-vendor-name="@{package.company}">via App Center</a></li>
 						<li>Docker images are available <a href="javascript:;" class="paddle_download" data-download-url="linux/docker.html" data-download-prompt="false" data-vendor-name="@{package.company}">on Docker Hub</a></li>
 -->
 					</ul>
