--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -4,6 +4,7 @@
 		<title>Buy FileBot License</title>
 		<link rel="stylesheet" href="base.css">
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 		<script src="purchase.js"></script>
@@ -41,8 +42,13 @@
 
 				<div id="purchase" class="section purchase">
 					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="532439">
-						Buy FileBot License (1 year)
+						Purchase 1 year universal license
 						<div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div>
+					</a>
+
+					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="534413">
+						Purchase life-time universal license
+						<div class="tag"><span class="paddle-gross" data-product="534413">US$60.00</span></div>
 					</a>
 
 					<ul class="list">
