--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -42,12 +42,12 @@
 
 				<div id="purchase" class="section purchase">
 					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="532439">
-						Purchase 1 year universal license
+						Purchase <em>1 year</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div>
 					</a>
 
 					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="534413">
-						Purchase life-time universal license
+						Purchase <em>life-time</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="534413">US$60.00</span></div>
 					</a>
 
