--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -60,9 +60,7 @@
 				<div class="section about">
 					<img class="icon" src="images/information.png" alt="about" width="48" height="48" />
 					<h2>About</h2>
-					<p>
-						<strong>FileBot</strong> is the ultimate tool for organizing and renaming your movies, tv shows or anime, and music well as downloading subtitles and artwork. It's smart and just works.
-					</p>
+					<p><strong>FileBot</strong> is the ultimate tool for organizing and renaming your Movies, TV Shows and Anime as well as fetching subtitles and artwork. It's smart and just works.</p>
 				</div>
 
 				<div id="macosx" class="section deployment macosx macappstore" style="display:none">
