--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -34,7 +34,7 @@
 					<img alt="screenshot" src="screenshots/license.png" width="152" height="141">
 				</div>
 				<div class="section about">
-					<h2>Buy</h2>
+					<h2>Buy a License</h2>
 					<p>
 					FileBot may be downloaded and evaluated for free, however a license must be purchased for continued use. Licenses are per-user, rather than per-machine, so you can enjoy FileBot on as many computers and operating systems as you wish with your license.
 					</p>
