--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -216,7 +216,7 @@
 				<div class="section purchase" id="purchase">
 					<img class="icon" src="images/coin.png" alt="download" width="48" height="48" />
 					<span class="quote">We work to better ourselves</span>
-					<h2>Buy License</h2>
+					<h2>Buy a License</h2>
 					<ul class="list">
 						<li class="purchase year">Purchase a <a href="purchase.html">1 year universal license</a><div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div></li>
 						<li class="note">A valid license is required to unlock FileBot.</li>
