--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -23,7 +23,8 @@
 		<link rel="stylesheet" href="base.css" type="text/css" />
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 
-		<link href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day" rel="stylesheet">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 		<script src="index.js"></script>
@@ -195,7 +196,7 @@
 					<span class="quote">Today is the day</span>
 					<h2>Download</h2>
 					<ul class="list">
-						<li class="windows">Available on the <a href="https://get.filebot.net/windows/2" target="windows_store">Windows Store</a></li>
+						<li class="windows">Available on the <a href="https://get.filebot.net/windows/2" target="windows_store">Microsoft Store</a></li>
 						<li class="macosx">Available on the <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a></li>
 						<li class="macappstore note"><span>The <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a> version does not support <a href="forums/viewtopic.php?t=5983">certain features</a>.</span></li>
 						<li>Windows Installer: <a href="javascript:;" class="paddle_download" data-download-url="@{link.release.prefix}_x64.msi" data-download-prompt="false" data-vendor-name="@{package.company}">@{release}_x64.msi</a></li>
@@ -217,8 +218,17 @@
 					<img class="icon" src="images/coin.png" alt="download" width="48" height="48" />
 					<span class="quote">We work to better ourselves</span>
 					<h2>Buy a License</h2>
+					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="532439">
+						Purchase <em>1 year</em> universal license
+						<div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div>
+					</a>
+
+					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="534413">
+						Purchase <em>life-time</em> universal license
+						<div class="tag"><span class="paddle-gross" data-product="534413">US$60.00</span></div>
+					</a>
+
 					<ul class="list">
-						<li class="purchase year">Purchase a <a href="purchase.html">1 year universal license</a><div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div></li>
 						<li class="note">A valid license is required to unlock FileBot.</li>
 						<li class="note">A single license is valid on all platforms and can be used on multiple machines.</li>
 						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Windows Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not require a separate license.</li>
