--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -219,12 +219,12 @@
 					<img class="icon" src="images/coin.png" alt="download" width="48" height="48" />
 					<span class="quote">We work to better ourselves</span>
 					<h2>Buy a License</h2>
-					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="532439">
+					<a id="year" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="index" data-product="532439">
 						Purchase <em>1 year</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="532439">US$6.00</span></div>
 					</a>
 
-					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="web" data-product="534413">
+					<a id="life" href="#!" class="paddle_button" data-allow-quantity="false" data-referrer="index" data-product="534413">
 						Purchase <em>life-time</em> universal license
 						<div class="tag"><span class="paddle-gross" data-product="534413">US$60.00</span></div>
 					</a>
