--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -54,7 +54,7 @@
 					<ul class="list">
 						<li class="note">A valid license is required to unlock FileBot.</li>
 						<li class="note">A single license is valid on all platforms and can be used on multiple machines.</li>
-						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Windows Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not require a separate license.</li>
+						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not require a separate license.</li>
 					</ul>
 				</div>
 
