Add additional links for purchase options / documentation

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -226,7 +226,7 @@
 					<ul class="list">
 						<li class="note">A valid license is required to unlock FileBot.</li>
 						<li class="note">A single license is valid on all platforms and can be used on multiple machines.</li>
-						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not require a separate license.</li>
+						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not require a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">separate license</a>.</li>
 					</ul>
 				</div>
 
