--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -289,7 +289,7 @@
 						</tr>
 						<tr>
 							<td>lang</td>
-							<td>language tag</td>
+							<td>subtitle language</td>
 							<td>eng</td>
 						</tr>
 						<tr>
