Add Paddle Terms of Service snippet

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -232,6 +232,10 @@
 						<li class="note">You may download and evaluate FileBot before purchasing a license.</li>
 						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not include a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
 					</ul>
+
+					<p class="paddle suggestion">
+						Our order process is conducted by our online reseller <a href="http://paddle.com/">Paddle.com</a>. <a href="http://paddle.com/">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns.
+					</p>
 				</div>
 
 				<div class="section contact">
