Add new License Agreement and Privacy Policy to front page

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -82,7 +82,7 @@
 				</p>
 
 				<div class="footer">
-					<p><a href="https://www.filebot.net/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
+					<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
 				</div>
 			</div>
 		</div>
