--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -232,10 +232,6 @@
 						<li class="note">You may download and evaluate FileBot before purchasing a license.</li>
 						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases do not include a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
 					</ul>
-
-					<p class="paddle suggestion">
-						Our order process is conducted by our online reseller <a href="http://paddle.com/">Paddle.com</a>. <a href="http://paddle.com/">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns.
-					</p>
 				</div>
 
 				<div class="section contact">
@@ -250,11 +246,10 @@
 				</div>
 			</div>
 
-			<div class="metrics">
-			</div>
+			<div class="metrics"></div>
 
 			<div class="footer">
-				<p><a href="/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
+				<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
 			</div>
 		</div>
 	</body>
