--- a/www.filebot.net/eula.html
+++ b/www.filebot.net/eula.html
@@ -179,7 +179,7 @@
 			<div class="metrics"></div>
 
 			<div class="footer">
-				<p><a href="/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
+				<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
 			</div>
 		</div>
 	</body>
