--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -449,7 +449,7 @@
 				</div>
 
 				<div class="footer">
-					<p><a href="https://www.filebot.net/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
+					<p><a href="/">FileBot Media Renamer</a> | Copyright @{tstamp.year} @{package.company}</p>
 				</div>
 			</div>
 		</div>
