Add {tags} to docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -279,6 +279,12 @@
 							<td>String</td>
 						</tr>
 						<tr>
+							<td>tags</td>
+							<td>movie tags</td>
+							<td>[Extended Edition]</td>
+							<td>String*</td>
+						</tr>
+						<tr>
 							<td>group</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4">release group</a></td>
 							<td>ALLiANCE</td>
